rename config.php to config.php.example, add ban.example.php and coorsponding volume mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - ./config/php.ini:/usr/local/etc/php/conf.d/settings.ini
       - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf
       - ./config/config.php:/var/www/src/config.php
+      - ./config/ban.php:/var/www/src/ban.php:ro
     networks:
       wiki-internal: {}
 
