--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./config/config.php:/var/www/src/config.php
+      - ./config/ban.php:/var/www/src/ban.php:ro
       - ./upload:/var/www/upload
     # uncomment to expose port directly
     # normally behind centeral traefik defined in production-manifests/services/traefik
@@ -48,6 +50,7 @@ services:
       - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf
       - ./config/config.php:/var/www/src/config.php
       - ./config/ban.php:/var/www/src/ban.php:ro
+      - ./upload:/var/www/upload
     networks:
       wiki-internal: {}
 
@@ -58,6 +61,7 @@ services:
     restart: unless-stopped
     env_file:
       - ./mariadb.env
+    command: --sql-mode=""
     # built-in healthcheck script
     healthcheck:
       test: ["healthcheck.sh", "--su=mysql", "--connect", "--innodb_initialized"]
