add --sql-mode="" to dev compose stack as well.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -52,6 +52,7 @@ services:
     restart: unless-stopped
     env_file:
       - ./mariadb.env
+    command: --sql-mode=""
     # built-in healthcheck script
     healthcheck:
       test: ["healthcheck.sh", "--su=mysql", "--connect", "--innodb_initialized"]
