--- a/php.env.example
+++ b/php.env.example
@@ -3,5 +3,7 @@ DB_USERNAME=wiki
 DB_DATABASE=wiki
 DB_PASSWORD=secret
 
-SITE_URL=wiki.wetfish.net
+# production: wiki.wetfish.net
+# development: wiki.wetfish.net.local
+SITE_URL=wiki.wetfish.net.local
 ALLOWED_EMBEDS=/^.*\.wetfish\.net$/i
