--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,11 +13,16 @@ services:
     container_name: wiki-web
     restart: unless-stopped
     volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./upload:/var/www/upload
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./config/config.php:/var/www/src/config.php:ro
+      - ./config/ban.php:/var/www/src/ban.php:ro
+      - ./upload:/var/www/upload:rw
+      # optional, bind mount in wwwroot for live editing
+      # don't forget to uncomment the similar line below
+      # - ./wwwroot:/var/www:rw
     # normally behind centeral traefik defined in production-manifests/services/traefik
     ports:
-      - "127.0.0.1:2405:80"
+      - "2405:80"
     # join wiki-internal network
     networks:
       wiki-internal: {}
@@ -35,9 +40,15 @@ services:
     env_file:
       - ./php.env
     volumes:
-      - ./config/php.ini:/usr/local/etc/php/conf.d/settings.ini
-      - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf
-      - ./config/config.php:/var/www/src/config.php
+      - ./config/config.php:/var/www/src/config.php:ro
+      - ./config/ban.php:/var/www/src/ban.php:ro
+      - ./upload:/var/www/upload:rw
+      - ./config/php-fpm.conf:/etc/php/5.6/fpm/php-fpm.conf:ro
+      - ./config/php-fpm-pool.conf:/etc/php/5.6/fpm/pool.d/www.conf:ro
+      - ./config/php.ini:/etc/php/5.6/fpm/php.ini:ro
+      # optional, bind mount in wwwroot for live editing
+      # don't forget to uncomment the similar line above
+      # - ./wwwroot:/var/www:rw
     networks:
       wiki-internal: {}
 
@@ -49,15 +60,9 @@ services:
     env_file:
       - ./mariadb.env
     command: --sql-mode=""
-    # built-in healthcheck script
-    healthcheck:
-      test: ["healthcheck.sh", "--su=mysql", "--connect", "--innodb_initialized"]
-      interval: 60s
-      timeout: 5s
-      retries: 5
     volumes:
-      - ./config/schema.sql:/docker-entrypoint-initdb.d/setup.sql
-      - ./db/data:/var/lib/mysql
+      - ./config/schema.sql:/docker-entrypoint-initdb.d/setup.sql:ro
+      - ./db/data:/var/lib/mysql:rw
     networks:
       wiki-internal: {}
 
