--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     container_name: wiki-web
     restart: unless-stopped
     volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./config/config.php:/var/www/src/config.php
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./config/config.php:/var/www/src/config.php:ro
       - ./config/ban.php:/var/www/src/ban.php:ro
-      - ./upload:/var/www/upload
+      - ./upload:/var/www/upload:rw
     # join wiki-internal and traefik-backend networks
     networks:
       wiki-internal: {}
@@ -29,11 +29,12 @@ services:
     env_file:
       - ./php.env
     volumes:
-      - ./config/php.ini:/usr/local/etc/php/conf.d/settings.ini
-      - ./config/php.conf:/usr/local/etc/php-fpm.d/zz-php.conf
-      - ./config/config.php:/var/www/src/config.php
+      - ./config/config.php:/var/www/src/config.php:ro
       - ./config/ban.php:/var/www/src/ban.php:ro
-      - ./upload:/var/www/upload
+      - ./upload:/var/www/upload:rw
+      - ./config/php-fpm.conf:/etc/php/5.6/fpm/php-fpm.conf:ro
+      - ./config/php-fpm-pool.conf:/etc/php/5.6/fpm/pool.d/www.conf:ro
+      - ./config/php.ini:/etc/php/5.6/fpm/php.ini:ro
     networks:
       wiki-internal: {}
 
@@ -45,15 +46,9 @@ services:
     env_file:
       - ./mariadb.env
     command: --sql-mode=""
-    # built-in healthcheck script
-    healthcheck:
-      test: ["healthcheck.sh", "--su=mysql", "--connect", "--innodb_initialized"]
-      interval: 60s
-      timeout: 5s
-      retries: 5
     volumes:
-      - ./config/schema.sql:/docker-entrypoint-initdb.d/setup.sql
-      - ./db/data:/var/lib/mysql
+      - ./config/schema.sql:/docker-entrypoint-initdb.d/setup.sql:ro
+      - ./db/data:/var/lib/mysql:rw
     networks:
       wiki-internal: {}
 
