--- a/mariadb.env.example
+++ b/mariadb.env.example
@@ -2,8 +2,8 @@ MARIADB_AUTO_UPGRADE=true
 MARIADB_ROOT_HOST=localhost
 MARIADB_MYSQL_LOCALHOST_USER=true
 
-MARIADB_ROOT_PASSWORD="mariadb"
+MARIADB_ROOT_PASSWORD=mariadb
 
-MARIADB_DATABASE="wiki"
-MARIADB_USER="wiki"
-MARIADB_PASSWORD="secret"
+MARIADB_DATABASE=wiki
+MARIADB_USER=wiki
+MARIADB_PASSWORD=secret
