properly name workflows (^c^v lol)

--- a/.github/workflows/docker-autobuild-nginx.yml
+++ b/.github/workflows/docker-autobuild-nginx.yml
@@ -1,5 +1,4 @@
-name: Docker Image Build - Laravel nginx
-
+name: Docker Image Build - Nginx
 on:
   # build when push to main or release happens
   push:
