--- a/.github/workflows/docker-autobuild-php.yml
+++ b/.github/workflows/docker-autobuild-php.yml
@@ -53,7 +53,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: "docker/Dockerfile.php"
+          file: "Dockerfile.php"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
