fixes: - properly pass through db connection envvars to php-fpm workers - expose mariadb on localhost in dev - remove unused "install-php-extensions" script

--- a/config/php-fpm-pool.conf
+++ b/config/php-fpm-pool.conf
@@ -390,6 +390,11 @@ catch_workers_output = yes
 ;env[TMP] = /tmp
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
+env[DB_USERNAME] = $DB_USERNAME
+env[DB_USERNAME] = $DB_USERNAME
+env[DB_DATABASE] = $DB_DATABASE
+env[DB_HOSTNAME] = $DB_HOSTNAME
+
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
