--- a/mariadb.env.example
+++ b/mariadb.env.example
@@ -1,5 +1,6 @@
 MARIADB_AUTO_UPGRADE=true
-MARIADB_ROOT_HOST=localhost
+# should be localhost in production
+MARIADB_ROOT_HOST=%
 MARIADB_MYSQL_LOCALHOST_USER=true
 
 MARIADB_ROOT_PASSWORD=mariadb
