--- a/config/php-fpm-pool.conf
+++ b/config/php-fpm-pool.conf
@@ -391,7 +391,7 @@ catch_workers_output = yes
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
 env[DB_USERNAME] = $DB_USERNAME
-env[DB_USERNAME] = $DB_USERNAME
+env[DB_PASSWORD] = $DB_PASSWORD
 env[DB_DATABASE] = $DB_DATABASE
 env[DB_HOSTNAME] = $DB_HOSTNAME
 
