move everything from config.php and ban.php into envvars

--- a/php.env.example
+++ b/php.env.example
@@ -7,3 +7,14 @@ DB_PASSWORD=secret
 # development: wiki.wetfish.net.local
 SITE_URL=wiki.wetfish.net.local
 ALLOWED_EMBEDS=/^.*\.wetfish\.net$/i
+
+LOGIN_PASSWORD=secret
+ADMIN_PASSWORD=secret
+BAN_PASSWORD=secret
+RECAPTCHA_PUBLIC=string
+RECAPTCHA_PRIVATE=string
+CAPTCHA_BYPASS=false
+
+# passed to json_decode()
+# needs to resolve as an array
+BANLIST='["127\.0\.0\.1", "^2600:123"]'
