pass more envvars to php-fpm worker pools

--- a/config/php-fpm-pool.conf
+++ b/config/php-fpm-pool.conf
@@ -395,6 +395,15 @@ env[DB_PASSWORD] = $DB_PASSWORD
 env[DB_DATABASE] = $DB_DATABASE
 env[DB_HOSTNAME] = $DB_HOSTNAME
 
+env[SITE_URL] = $SITE_URL
+env[ALLOWED_EMBEDS] = $ALLOWED_EMBEDS
+env[LOGIN_PASSWORD]=$LOGIN_PASSWORD
+env[ADMIN_PASSWORD]=$ADMIN_PASSWORD
+env[BAN_PASSWORD]=$BAN_PASSWORD
+env[CAPTCHA_BYPASS]=$CAPTCHA_BYPASS
+env[BANLIST]=$BANLIST
+
+
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
