--- a/config/php-fpm-pool.conf
+++ b/config/php-fpm-pool.conf
@@ -396,6 +396,7 @@ env[DB_DATABASE] = $DB_DATABASE
 env[DB_HOSTNAME] = $DB_HOSTNAME
 
 env[SITE_URL] = $SITE_URL
+env[INTERNAL_HOSTNAME]=$INTERNAL_HOSTNAME
 env[ALLOWED_EMBEDS] = $ALLOWED_EMBEDS
 env[LOGIN_PASSWORD]=$LOGIN_PASSWORD
 env[ADMIN_PASSWORD]=$ADMIN_PASSWORD
