--- a/php.env.example
+++ b/php.env.example
@@ -3,10 +3,18 @@ DB_USERNAME=wiki
 DB_DATABASE=wiki
 DB_PASSWORD=secret
 
-# production: wiki.wetfish.net
-# development: wiki.wetfish.net.local
-SITE_URL=wiki.wetfish.net.local
-ALLOWED_EMBEDS=/^.*\.wetfish\.net$/i
+# Production
+# SITE_URL=wiki.wetfish.net
+# ALLOWED_EMBEDS=/^.*\.wetfish.net$/i
+
+# Development
+SITE_URL=127.0.0.1:2405
+ALLOWED_EMBEDS=/^127\.0\.0\.1$/i
+
+# Used for embedding content from other wiki pages
+# This hostname is defined in the docker-compose file
+# If the site is being run without docker, this can be the same as SITE_URL
+INTERNAL_HOSTNAME=wiki-web
 
 LOGIN_PASSWORD=secret
 ADMIN_PASSWORD=secret
