add client_max_body_size 64M (is this correct?)

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,6 +5,8 @@ server {
      error_log  /var/log/nginx/error.log;
      access_log /var/log/nginx/access.log;
      root /var/www/;
+
+    client_max_body_size 64M;
     
      location / {
          autoindex on;
