--- a/wwwroot/src/package.json
+++ b/wwwroot/src/package.json
@@ -4,6 +4,7 @@
   "description": "A messy wiki that's only useful for wetfish",
   "author": "Rachel Fish <rachel@wetfish.net> (https://wetfish.net)",
   "dependencies": {
+    "@ruffle-rs/ruffle": "^0.1.0-nightly.2024.1.2",
     "dragondrop": "^0.5.2",
     "load": "https://github.com/itsrachelfish/load#ba69cda08d9bd08a2f4b866f09dc6738dd29b06f",
     "wetfish-basic": "0.7.7"
